spudd-3.6.2/Spudd/src/MDP/mdpparser.output
Terminals unused in grammar

   INTGR
   VALUE
   VAL


Grammar

    0 $accept: input $end

    1 input: mdp

    2 mdp: varilist obslist ibelief unn actslist reward disc tolhor

    3 varilist: OPP VARIABLES varlist CLP

    4 varlist: vardec
    5        | varlist vardec

    6 vardec: OPP varname vallist CLP

    7 varname: NAME

    8 vallist: vallist NAME
    9        | NAME NAME

   10 obslist: /* empty */
   11        | OPP OBSERVATIONS oblist CLP

   12 oblist: obdec
   13       | oblist obdec

   14 obdec: OPP obsname obsvallist CLP

   15 obsvallist: obsvallist NAME
   16           | NAME NAME

   17 obsname: NAME

   18 ibelief: /* empty */

   19 $@1: /* empty */

   20 ibelief: BELIEF $@1 belieflist ENDBELIEF

   21 belieflist: belieflist belief
   22           | belief

   23 $@2: /* empty */

   24 belief: NAME $@2 theadd

   25 unn: /* empty */
   26    | UNNORM

   27 actslist: actslist actionordd
   28         | actionordd

   29 actionordd: action
   30           | thedd

   31 $@3: /* empty */

   32 thedd: ddname $@3 theadd ENDDD

   33 ddname: STARTDD NAME

   34 action: actionname oldactioncost acttreelist observation actioncost ENDACTION

   35 actionname: ACTION NAME

   36 oldactioncost: /* empty */
   37              | REAL

   38 actioncost: /* empty */

   39 $@4: /* empty */

   40 actioncost: COST $@4 theadd

   41 observation: /* empty */

   42 $@5: /* empty */

   43 $@6: /* empty */

   44 observation: OBSERVE $@5 obsfunlist $@6 ENDOBSERVE

   45 obsfunlist: obsfunlist obsfun
   46           | obsfun

   47 $@7: /* empty */

   48 obsfun: NAME $@7 theadd

   49 acttreelist: acttreelist acttree
   50            | acttree

   51 $@8: /* empty */

   52 acttree: NAME $@8 theadd

   53 $@9: /* empty */

   54 theadd: OSB CONJ $@9 con_dis_add CSB

   55 $@10: /* empty */

   56 theadd: OSB DISJ $@10 con_dis_add CSB

   57 $@11: /* empty */

   58 theadd: OSB RENORM NAME PRIME $@11 theadd CSB

   59 $@12: /* empty */

   60 theadd: OPP rootnodename $@12 currentadd CLP
   61       | constnode
   62       | OPP primeadd CLP

   63 rootnodename: NAME
   64             | NAME PRIME

   65 con_dis_add: con_dis_add theadd
   66            | theadd

   67 currentadd: currentadd subadd
   68           | subadd

   69 $@13: /* empty */

   70 subadd: OPP NAME $@13 theadd CLP

   71 primeadd: primeadd constadd
   72         | constadd constadd

   73 constnode: OPP REAL CLP
   74          | OPP NAME CLP

   75 constadd: REAL

   76 $@14: /* empty */

   77 reward: REWARD $@14 theadd

   78 disc: DISCOUNT REAL

   79 $@15: /* empty */

   80 disc: DISCOUNT $@15 theadd

   81 tolhor: tol
   82       | hor

   83 tol: TOLERANCE REAL

   84 hor: HORIZON REAL


Terminals, with rules where they appear

$end (0) 0
error (256)
NAME (258) 7 8 9 15 16 17 24 33 35 48 52 58 63 64 70 74
REAL (259) 37 73 75 78 83 84
INTGR (260)
OPP (261) 3 6 11 14 60 62 70 73 74
CLP (262) 3 6 11 14 60 62 70 73 74
VARIABLES (263) 3
DISCOUNT (264) 78 80
TOLERANCE (265) 83
REWARD (266) 77
VALUE (267)
ACTION (268) 35
ENDACTION (269) 34
OBSERVATIONS (270) 11
OBSERVE (271) 44
ENDOBSERVE (272) 44
BELIEF (273) 20
ENDBELIEF (274) 20
DISJ (275) 56
CONJ (276) 54
RENORM (277) 58
OSB (278) 54 56 58
CSB (279) 54 56 58
HORIZON (280) 84
VAL (281)
COST (282) 40
PRIME (283) 58 64
UNNORM (284) 26
STARTDD (285) 33
ENDDD (286) 32


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
input (33)
    on left: 1, on right: 0
mdp (34)
    on left: 2, on right: 1
varilist (35)
    on left: 3, on right: 2
varlist (36)
    on left: 4 5, on right: 3 5
vardec (37)
    on left: 6, on right: 4 5
varname (38)
    on left: 7, on right: 6
vallist (39)
    on left: 8 9, on right: 6 8
obslist (40)
    on left: 10 11, on right: 2
oblist (41)
    on left: 12 13, on right: 11 13
obdec (42)
    on left: 14, on right: 12 13
obsvallist (43)
    on left: 15 16, on right: 14 15
obsname (44)
    on left: 17, on right: 14
ibelief (45)
    on left: 18 20, on right: 2
$@1 (46)
    on left: 19, on right: 20
belieflist (47)
    on left: 21 22, on right: 20 21
belief (48)
    on left: 24, on right: 21 22
$@2 (49)
    on left: 23, on right: 24
unn (50)
    on left: 25 26, on right: 2
actslist (51)
    on left: 27 28, on right: 2 27
actionordd (52)
    on left: 29 30, on right: 27 28
thedd (53)
    on left: 32, on right: 30
$@3 (54)
    on left: 31, on right: 32
ddname (55)
    on left: 33, on right: 32
action (56)
    on left: 34, on right: 29
actionname (57)
    on left: 35, on right: 34
oldactioncost (58)
    on left: 36 37, on right: 34
actioncost (59)
    on left: 38 40, on right: 34
$@4 (60)
    on left: 39, on right: 40
observation (61)
    on left: 41 44, on right: 34
$@5 (62)
    on left: 42, on right: 44
$@6 (63)
    on left: 43, on right: 44
obsfunlist (64)
    on left: 45 46, on right: 44 45
obsfun (65)
    on left: 48, on right: 45 46
$@7 (66)
    on left: 47, on right: 48
acttreelist (67)
    on left: 49 50, on right: 34 49
acttree (68)
    on left: 52, on right: 49 50
$@8 (69)
    on left: 51, on right: 52
theadd (70)
    on left: 54 56 58 60 61 62, on right: 24 32 40 48 52 58 65 66 70
    77 80
$@9 (71)
    on left: 53, on right: 54
$@10 (72)
    on left: 55, on right: 56
$@11 (73)
    on left: 57, on right: 58
$@12 (74)
    on left: 59, on right: 60
rootnodename (75)
    on left: 63 64, on right: 60
con_dis_add (76)
    on left: 65 66, on right: 54 56 65
currentadd (77)
    on left: 67 68, on right: 60 67
subadd (78)
    on left: 70, on right: 67 68
$@13 (79)
    on left: 69, on right: 70
primeadd (80)
    on left: 71 72, on right: 62 71
constnode (81)
    on left: 73 74, on right: 61
constadd (82)
    on left: 75, on right: 71 72
reward (83)
    on left: 77, on right: 2
$@14 (84)
    on left: 76, on right: 77
disc (85)
    on left: 78 80, on right: 2
$@15 (86)
    on left: 79, on right: 80
tolhor (87)
    on left: 81 82, on right: 2
tol (88)
    on left: 83, on right: 81
hor (89)
    on left: 84, on right: 82


State 0

    0 $accept: . input $end

    OPP  shift, and go to state 1

    input     go to state 2
    mdp       go to state 3
    varilist  go to state 4


State 1

    3 varilist: OPP . VARIABLES varlist CLP

    VARIABLES  shift, and go to state 5


State 2

    0 $accept: input . $end

    $end  shift, and go to state 6


State 3

    1 input: mdp .

    $default  reduce using rule 1 (input)


State 4

    2 mdp: varilist . obslist ibelief unn actslist reward disc tolhor

    OPP  shift, and go to state 7

    $default  reduce using rule 10 (obslist)

    obslist  go to state 8


State 5

    3 varilist: OPP VARIABLES . varlist CLP

    OPP  shift, and go to state 9

    varlist  go to state 10
    vardec   go to state 11


State 6

    0 $accept: input $end .

    $default  accept


State 7

   11 obslist: OPP . OBSERVATIONS oblist CLP

    OBSERVATIONS  shift, and go to state 12


State 8

    2 mdp: varilist obslist . ibelief unn actslist reward disc tolhor

    BELIEF  shift, and go to state 13

    $default  reduce using rule 18 (ibelief)

    ibelief  go to state 14


State 9

    6 vardec: OPP . varname vallist CLP

    NAME  shift, and go to state 15

    varname  go to state 16


State 10

    3 varilist: OPP VARIABLES varlist . CLP
    5 varlist: varlist . vardec

    OPP  shift, and go to state 9
    CLP  shift, and go to state 17

    vardec  go to state 18


State 11

    4 varlist: vardec .

    $default  reduce using rule 4 (varlist)


State 12

   11 obslist: OPP OBSERVATIONS . oblist CLP

    OPP  shift, and go to state 19

    oblist  go to state 20
    obdec   go to state 21


State 13

   20 ibelief: BELIEF . $@1 belieflist ENDBELIEF

    $default  reduce using rule 19 ($@1)

    $@1  go to state 22


State 14

    2 mdp: varilist obslist ibelief . unn actslist reward disc tolhor

    UNNORM  shift, and go to state 23

    $default  reduce using rule 25 (unn)

    unn  go to state 24


State 15

    7 varname: NAME .

    $default  reduce using rule 7 (varname)


State 16

    6 vardec: OPP varname . vallist CLP

    NAME  shift, and go to state 25

    vallist  go to state 26


State 17

    3 varilist: OPP VARIABLES varlist CLP .

    $default  reduce using rule 3 (varilist)


State 18

    5 varlist: varlist vardec .

    $default  reduce using rule 5 (varlist)


State 19

   14 obdec: OPP . obsname obsvallist CLP

    NAME  shift, and go to state 27

    obsname  go to state 28


State 20

   11 obslist: OPP OBSERVATIONS oblist . CLP
   13 oblist: oblist . obdec

    OPP  shift, and go to state 19
    CLP  shift, and go to state 29

    obdec  go to state 30


State 21

   12 oblist: obdec .

    $default  reduce using rule 12 (oblist)


State 22

   20 ibelief: BELIEF $@1 . belieflist ENDBELIEF

    NAME  shift, and go to state 31

    belieflist  go to state 32
    belief      go to state 33


State 23

   26 unn: UNNORM .

    $default  reduce using rule 26 (unn)


State 24

    2 mdp: varilist obslist ibelief unn . actslist reward disc tolhor

    ACTION   shift, and go to state 34
    STARTDD  shift, and go to state 35

    actslist    go to state 36
    actionordd  go to state 37
    thedd       go to state 38
    ddname      go to state 39
    action      go to state 40
    actionname  go to state 41


State 25

    9 vallist: NAME . NAME

    NAME  shift, and go to state 42


State 26

    6 vardec: OPP varname vallist . CLP
    8 vallist: vallist . NAME

    NAME  shift, and go to state 43
    CLP   shift, and go to state 44


State 27

   17 obsname: NAME .

    $default  reduce using rule 17 (obsname)


State 28

   14 obdec: OPP obsname . obsvallist CLP

    NAME  shift, and go to state 45

    obsvallist  go to state 46


State 29

   11 obslist: OPP OBSERVATIONS oblist CLP .

    $default  reduce using rule 11 (obslist)


State 30

   13 oblist: oblist obdec .

    $default  reduce using rule 13 (oblist)


State 31

   24 belief: NAME . $@2 theadd

    $default  reduce using rule 23 ($@2)

    $@2  go to state 47


State 32

   20 ibelief: BELIEF $@1 belieflist . ENDBELIEF
   21 belieflist: belieflist . belief

    NAME       shift, and go to state 31
    ENDBELIEF  shift, and go to state 48

    belief  go to state 49


State 33

   22 belieflist: belief .

    $default  reduce using rule 22 (belieflist)


State 34

   35 actionname: ACTION . NAME

    NAME  shift, and go to state 50


State 35

   33 ddname: STARTDD . NAME

    NAME  shift, and go to state 51


State 36

    2 mdp: varilist obslist ibelief unn actslist . reward disc tolhor
   27 actslist: actslist . actionordd

    REWARD   shift, and go to state 52
    ACTION   shift, and go to state 34
    STARTDD  shift, and go to state 35

    actionordd  go to state 53
    thedd       go to state 38
    ddname      go to state 39
    action      go to state 40
    actionname  go to state 41
    reward      go to state 54


State 37

   28 actslist: actionordd .

    $default  reduce using rule 28 (actslist)


State 38

   30 actionordd: thedd .

    $default  reduce using rule 30 (actionordd)


State 39

   32 thedd: ddname . $@3 theadd ENDDD

    $default  reduce using rule 31 ($@3)

    $@3  go to state 55


State 40

   29 actionordd: action .

    $default  reduce using rule 29 (actionordd)


State 41

   34 action: actionname . oldactioncost acttreelist observation actioncost ENDACTION

    REAL  shift, and go to state 56

    $default  reduce using rule 36 (oldactioncost)

    oldactioncost  go to state 57


State 42

    9 vallist: NAME NAME .

    $default  reduce using rule 9 (vallist)


State 43

    8 vallist: vallist NAME .

    $default  reduce using rule 8 (vallist)


State 44

    6 vardec: OPP varname vallist CLP .

    $default  reduce using rule 6 (vardec)


State 45

   16 obsvallist: NAME . NAME

    NAME  shift, and go to state 58


State 46

   14 obdec: OPP obsname obsvallist . CLP
   15 obsvallist: obsvallist . NAME

    NAME  shift, and go to state 59
    CLP   shift, and go to state 60


State 47

   24 belief: NAME $@2 . theadd

    OPP  shift, and go to state 61
    OSB  shift, and go to state 62

    theadd     go to state 63
    constnode  go to state 64


State 48

   20 ibelief: BELIEF $@1 belieflist ENDBELIEF .

    $default  reduce using rule 20 (ibelief)


State 49

   21 belieflist: belieflist belief .

    $default  reduce using rule 21 (belieflist)


State 50

   35 actionname: ACTION NAME .

    $default  reduce using rule 35 (actionname)


State 51

   33 ddname: STARTDD NAME .

    $default  reduce using rule 33 (ddname)


State 52

   77 reward: REWARD . $@14 theadd

    $default  reduce using rule 76 ($@14)

    $@14  go to state 65


State 53

   27 actslist: actslist actionordd .

    $default  reduce using rule 27 (actslist)


State 54

    2 mdp: varilist obslist ibelief unn actslist reward . disc tolhor

    DISCOUNT  shift, and go to state 66

    disc  go to state 67


State 55

   32 thedd: ddname $@3 . theadd ENDDD

    OPP  shift, and go to state 61
    OSB  shift, and go to state 62

    theadd     go to state 68
    constnode  go to state 64


State 56

   37 oldactioncost: REAL .

    $default  reduce using rule 37 (oldactioncost)


State 57

   34 action: actionname oldactioncost . acttreelist observation actioncost ENDACTION

    NAME  shift, and go to state 69

    acttreelist  go to state 70
    acttree      go to state 71


State 58

   16 obsvallist: NAME NAME .

    $default  reduce using rule 16 (obsvallist)


State 59

   15 obsvallist: obsvallist NAME .

    $default  reduce using rule 15 (obsvallist)


State 60

   14 obdec: OPP obsname obsvallist CLP .

    $default  reduce using rule 14 (obdec)


State 61

   60 theadd: OPP . rootnodename $@12 currentadd CLP
   62       | OPP . primeadd CLP
   73 constnode: OPP . REAL CLP
   74          | OPP . NAME CLP

    NAME  shift, and go to state 72
    REAL  shift, and go to state 73

    rootnodename  go to state 74
    primeadd      go to state 75
    constadd      go to state 76


State 62

   54 theadd: OSB . CONJ $@9 con_dis_add CSB
   56       | OSB . DISJ $@10 con_dis_add CSB
   58       | OSB . RENORM NAME PRIME $@11 theadd CSB

    DISJ    shift, and go to state 77
    CONJ    shift, and go to state 78
    RENORM  shift, and go to state 79


State 63

   24 belief: NAME $@2 theadd .

    $default  reduce using rule 24 (belief)


State 64

   61 theadd: constnode .

    $default  reduce using rule 61 (theadd)


State 65

   77 reward: REWARD $@14 . theadd

    OPP  shift, and go to state 61
    OSB  shift, and go to state 62

    theadd     go to state 80
    constnode  go to state 64


State 66

   78 disc: DISCOUNT . REAL
   80     | DISCOUNT . $@15 theadd

    REAL  shift, and go to state 81

    $default  reduce using rule 79 ($@15)

    $@15  go to state 82


State 67

    2 mdp: varilist obslist ibelief unn actslist reward disc . tolhor

    TOLERANCE  shift, and go to state 83
    HORIZON    shift, and go to state 84

    tolhor  go to state 85
    tol     go to state 86
    hor     go to state 87


State 68

   32 thedd: ddname $@3 theadd . ENDDD

    ENDDD  shift, and go to state 88


State 69

   52 acttree: NAME . $@8 theadd

    $default  reduce using rule 51 ($@8)

    $@8  go to state 89


State 70

   34 action: actionname oldactioncost acttreelist . observation actioncost ENDACTION
   49 acttreelist: acttreelist . acttree

    NAME     shift, and go to state 69
    OBSERVE  shift, and go to state 90

    $default  reduce using rule 41 (observation)

    observation  go to state 91
    acttree      go to state 92


State 71

   50 acttreelist: acttree .

    $default  reduce using rule 50 (acttreelist)


State 72

   63 rootnodename: NAME .
   64             | NAME . PRIME
   74 constnode: OPP NAME . CLP

    CLP    shift, and go to state 93
    PRIME  shift, and go to state 94

    $default  reduce using rule 63 (rootnodename)


State 73

   73 constnode: OPP REAL . CLP
   75 constadd: REAL .

    CLP  shift, and go to state 95

    $default  reduce using rule 75 (constadd)


State 74

   60 theadd: OPP rootnodename . $@12 currentadd CLP

    $default  reduce using rule 59 ($@12)

    $@12  go to state 96


State 75

   62 theadd: OPP primeadd . CLP
   71 primeadd: primeadd . constadd

    REAL  shift, and go to state 97
    CLP   shift, and go to state 98

    constadd  go to state 99


State 76

   72 primeadd: constadd . constadd

    REAL  shift, and go to state 97

    constadd  go to state 100


State 77

   56 theadd: OSB DISJ . $@10 con_dis_add CSB

    $default  reduce using rule 55 ($@10)

    $@10  go to state 101


State 78

   54 theadd: OSB CONJ . $@9 con_dis_add CSB

    $default  reduce using rule 53 ($@9)

    $@9  go to state 102


State 79

   58 theadd: OSB RENORM . NAME PRIME $@11 theadd CSB

    NAME  shift, and go to state 103


State 80

   77 reward: REWARD $@14 theadd .

    $default  reduce using rule 77 (reward)


State 81

   78 disc: DISCOUNT REAL .

    $default  reduce using rule 78 (disc)


State 82

   80 disc: DISCOUNT $@15 . theadd

    OPP  shift, and go to state 61
    OSB  shift, and go to state 62

    theadd     go to state 104
    constnode  go to state 64


State 83

   83 tol: TOLERANCE . REAL

    REAL  shift, and go to state 105


State 84

   84 hor: HORIZON . REAL

    REAL  shift, and go to state 106


State 85

    2 mdp: varilist obslist ibelief unn actslist reward disc tolhor .

    $default  reduce using rule 2 (mdp)


State 86

   81 tolhor: tol .

    $default  reduce using rule 81 (tolhor)


State 87

   82 tolhor: hor .

    $default  reduce using rule 82 (tolhor)


State 88

   32 thedd: ddname $@3 theadd ENDDD .

    $default  reduce using rule 32 (thedd)


State 89

   52 acttree: NAME $@8 . theadd

    OPP  shift, and go to state 61
    OSB  shift, and go to state 62

    theadd     go to state 107
    constnode  go to state 64


State 90

   44 observation: OBSERVE . $@5 obsfunlist $@6 ENDOBSERVE

    $default  reduce using rule 42 ($@5)

    $@5  go to state 108


State 91

   34 action: actionname oldactioncost acttreelist observation . actioncost ENDACTION

    COST  shift, and go to state 109

    $default  reduce using rule 38 (actioncost)

    actioncost  go to state 110


State 92

   49 acttreelist: acttreelist acttree .

    $default  reduce using rule 49 (acttreelist)


State 93

   74 constnode: OPP NAME CLP .

    $default  reduce using rule 74 (constnode)


State 94

   64 rootnodename: NAME PRIME .

    $default  reduce using rule 64 (rootnodename)


State 95

   73 constnode: OPP REAL CLP .

    $default  reduce using rule 73 (constnode)


State 96

   60 theadd: OPP rootnodename $@12 . currentadd CLP

    OPP  shift, and go to state 111

    currentadd  go to state 112
    subadd      go to state 113


State 97

   75 constadd: REAL .

    $default  reduce using rule 75 (constadd)


State 98

   62 theadd: OPP primeadd CLP .

    $default  reduce using rule 62 (theadd)


State 99

   71 primeadd: primeadd constadd .

    $default  reduce using rule 71 (primeadd)


State 100

   72 primeadd: constadd constadd .

    $default  reduce using rule 72 (primeadd)


State 101

   56 theadd: OSB DISJ $@10 . con_dis_add CSB

    OPP  shift, and go to state 61
    OSB  shift, and go to state 62

    theadd       go to state 114
    con_dis_add  go to state 115
    constnode    go to state 64


State 102

   54 theadd: OSB CONJ $@9 . con_dis_add CSB

    OPP  shift, and go to state 61
    OSB  shift, and go to state 62

    theadd       go to state 114
    con_dis_add  go to state 116
    constnode    go to state 64


State 103

   58 theadd: OSB RENORM NAME . PRIME $@11 theadd CSB

    PRIME  shift, and go to state 117


State 104

   80 disc: DISCOUNT $@15 theadd .

    $default  reduce using rule 80 (disc)


State 105

   83 tol: TOLERANCE REAL .

    $default  reduce using rule 83 (tol)


State 106

   84 hor: HORIZON REAL .

    $default  reduce using rule 84 (hor)


State 107

   52 acttree: NAME $@8 theadd .

    $default  reduce using rule 52 (acttree)


State 108

   44 observation: OBSERVE $@5 . obsfunlist $@6 ENDOBSERVE

    NAME  shift, and go to state 118

    obsfunlist  go to state 119
    obsfun      go to state 120


State 109

   40 actioncost: COST . $@4 theadd

    $default  reduce using rule 39 ($@4)

    $@4  go to state 121


State 110

   34 action: actionname oldactioncost acttreelist observation actioncost . ENDACTION

    ENDACTION  shift, and go to state 122


State 111

   70 subadd: OPP . NAME $@13 theadd CLP

    NAME  shift, and go to state 123


State 112

   60 theadd: OPP rootnodename $@12 currentadd . CLP
   67 currentadd: currentadd . subadd

    OPP  shift, and go to state 111
    CLP  shift, and go to state 124

    subadd  go to state 125


State 113

   68 currentadd: subadd .

    $default  reduce using rule 68 (currentadd)


State 114

   66 con_dis_add: theadd .

    $default  reduce using rule 66 (con_dis_add)


State 115

   56 theadd: OSB DISJ $@10 con_dis_add . CSB
   65 con_dis_add: con_dis_add . theadd

    OPP  shift, and go to state 61
    OSB  shift, and go to state 62
    CSB  shift, and go to state 126

    theadd     go to state 127
    constnode  go to state 64


State 116

   54 theadd: OSB CONJ $@9 con_dis_add . CSB
   65 con_dis_add: con_dis_add . theadd

    OPP  shift, and go to state 61
    OSB  shift, and go to state 62
    CSB  shift, and go to state 128

    theadd     go to state 127
    constnode  go to state 64


State 117

   58 theadd: OSB RENORM NAME PRIME . $@11 theadd CSB

    $default  reduce using rule 57 ($@11)

    $@11  go to state 129


State 118

   48 obsfun: NAME . $@7 theadd

    $default  reduce using rule 47 ($@7)

    $@7  go to state 130


State 119

   44 observation: OBSERVE $@5 obsfunlist . $@6 ENDOBSERVE
   45 obsfunlist: obsfunlist . obsfun

    NAME  shift, and go to state 118

    $default  reduce using rule 43 ($@6)

    $@6     go to state 131
    obsfun  go to state 132


State 120

   46 obsfunlist: obsfun .

    $default  reduce using rule 46 (obsfunlist)


State 121

   40 actioncost: COST $@4 . theadd

    OPP  shift, and go to state 61
    OSB  shift, and go to state 62

    theadd     go to state 133
    constnode  go to state 64


State 122

   34 action: actionname oldactioncost acttreelist observation actioncost ENDACTION .

    $default  reduce using rule 34 (action)


State 123

   70 subadd: OPP NAME . $@13 theadd CLP

    $default  reduce using rule 69 ($@13)

    $@13  go to state 134


State 124

   60 theadd: OPP rootnodename $@12 currentadd CLP .

    $default  reduce using rule 60 (theadd)


State 125

   67 currentadd: currentadd subadd .

    $default  reduce using rule 67 (currentadd)


State 126

   56 theadd: OSB DISJ $@10 con_dis_add CSB .

    $default  reduce using rule 56 (theadd)


State 127

   65 con_dis_add: con_dis_add theadd .

    $default  reduce using rule 65 (con_dis_add)


State 128

   54 theadd: OSB CONJ $@9 con_dis_add CSB .

    $default  reduce using rule 54 (theadd)


State 129

   58 theadd: OSB RENORM NAME PRIME $@11 . theadd CSB

    OPP  shift, and go to state 61
    OSB  shift, and go to state 62

    theadd     go to state 135
    constnode  go to state 64


State 130

   48 obsfun: NAME $@7 . theadd

    OPP  shift, and go to state 61
    OSB  shift, and go to state 62

    theadd     go to state 136
    constnode  go to state 64


State 131

   44 observation: OBSERVE $@5 obsfunlist $@6 . ENDOBSERVE

    ENDOBSERVE  shift, and go to state 137


State 132

   45 obsfunlist: obsfunlist obsfun .

    $default  reduce using rule 45 (obsfunlist)


State 133

   40 actioncost: COST $@4 theadd .

    $default  reduce using rule 40 (actioncost)


State 134

   70 subadd: OPP NAME $@13 . theadd CLP

    OPP  shift, and go to state 61
    OSB  shift, and go to state 62

    theadd     go to state 138
    constnode  go to state 64


State 135

   58 theadd: OSB RENORM NAME PRIME $@11 theadd . CSB

    CSB  shift, and go to state 139


State 136

   48 obsfun: NAME $@7 theadd .

    $default  reduce using rule 48 (obsfun)


State 137

   44 observation: OBSERVE $@5 obsfunlist $@6 ENDOBSERVE .

    $default  reduce using rule 44 (observation)


State 138

   70 subadd: OPP NAME $@13 theadd . CLP

    CLP  shift, and go to state 140


State 139

   58 theadd: OSB RENORM NAME PRIME $@11 theadd CSB .

    $default  reduce using rule 58 (theadd)


State 140

   70 subadd: OPP NAME $@13 theadd CLP .

    $default  reduce using rule 70 (subadd)
